benchmark/deploy/istio-1.13.4/plus/istio-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"istio-ingressgateway","install.operator.istio.io/owning-resource":"unknown","install.operator.istio.io/owning-resource-namespace":"istio-system","istio":"ingressgateway","istio.io/rev":"default","operator.istio.io/component":"IngressGateways","operator.istio.io/managed":"Reconcile","operator.istio.io/version":"1.13.4","release":"istio"},"name":"istio-ingressgateway","namespace":"istio-system"},"spec":{"ports" [...]
  creationTimestamp: '2022-05-18T07:47:22Z'
  labels:
    app: istio-ingressgateway
    install.operator.istio.io/owning-resource: unknown
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: ingressgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.13.4
    release: istio
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
          'f:labels':
            'f:app': {}
            'f:install.operator.istio.io/owning-resource': {}
            'f:install.operator.istio.io/owning-resource-namespace': {}
            'f:istio': {}
            'f:istio.io/rev': {}
            'f:operator.istio.io/component': {}
            'f:operator.istio.io/managed': {}
            'f:operator.istio.io/version': {}
            'f:release': {}
        'f:spec':
          'f:ports':
            'k:{"port":15021,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":15443,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":31400,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":443,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":80,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector':
            'f:app': {}
            'f:istio': {}
      manager: istio-operator
      operation: Apply
      time: '2022-05-18T07:47:22Z'
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:type': {}
      manager: Mozilla
      operation: Update
      time: '2022-05-23T14:02:11Z'
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:externalIPs': {}
      manager: kubectl-edit
      operation: Update
      time: '2022-05-23T14:10:36Z'
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: '885692'
  uid: 6143dead-9efd-4bc2-b074-bb3abed98517
spec:
  clusterIP: 10.111.113.35
  clusterIPs:
    - 10.111.113.35
  externalIPs:
    - 47.99.240.112
  externalTrafficPolicy: Cluster
  ports:
    - name: status-port
      nodePort: 32555
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      nodePort: 30274
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      nodePort: 30660
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: tcp
      nodePort: 32618
      port: 31400
      protocol: TCP
      targetPort: 31400
    - name: tls
      nodePort: 30446
      port: 15443
      protocol: TCP
      targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
