benchmark/deploy/istio-1.13.4/plus/horsecoder-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: horsecoder-gateway
  namespace: horsecoder
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: "horsecoder-credential" # must be the same as secret
    hosts:
    - "production.horsecoder.com"
